<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".ui.fragment.ContactFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:layout_width="@dimen/dimen_100"
            android:layout_height="@dimen/dimen_100"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/dimen_16"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_8"
            android:id="@+id/phone_number_text"
            android:drawableEnd="@drawable/ic_phone_black_24dp"
            android:drawablePadding="@dimen/dimen_16"
            android:drawableTint="@color/colorBlueGray900"
            android:text="@string/fake_phone_number"
            android:textSize="@dimen/text_16" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_8"
            android:id="@+id/email_text"
            android:drawableEnd="@drawable/ic_phone_black_24dp"
            android:drawablePadding="@dimen/dimen_16"
            android:drawableTint="@color/colorBlueGray900"
            android:text="@string/fake_email"
            android:textSize="@dimen/text_16" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_16"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/facebook_image_view"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_facebook" />


            <ImageView
                android:id="@+id/twitter_image_view"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_twitter" />


            <ImageView
                android:id="@+id/whatsapp_image_view"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_whatsapp" />


            <ImageView
                android:id="@+id/google_plus_image_view"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_google_plus" />

            <ImageView
                android:id="@+id/instagram_image_view"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_instagram" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBlueGray900"
            android:gravity="center"
            android:text="@string/contact_text"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_24" />

        <EditText
            android:id="@+id/name_edit_text"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_50"
            android:layout_margin="@dimen/dimen_8"
            android:hint="@string/name_edit"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/email_edit_text"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_50"
            android:layout_margin="@dimen/dimen_8"
            android:hint="@string/email"
            android:inputType="textEmailAddress"

            />

        <EditText
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_50"
            android:layout_margin="@dimen/dimen_8"
            android:hint="@string/phone_number_hint"
            android:inputType="phone"

            />

        <EditText
            android:id="@+id/message_title_edit_text"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_50"
            android:layout_margin="@dimen/dimen_8"
            android:hint="@string/message_title"
            android:inputType="textEmailSubject"

            />

        <EditText
            android:id="@+id/message_content_edit_text"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_50"
            android:layout_margin="@dimen/dimen_8"
            android:hint="@string/message"
            android:inputType="text"

            />

        <Button
            android:id="@+id/send_message_button"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/colorBlueGray900"
            android:text="@string/send_code"
            android:textColor="@android:color/white" />
    </LinearLayout>


</ScrollView>