<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.RequestDetailsActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/person_name_text_view"
        android:layout_marginStart="@dimen/dimen_8"
        android:layout_marginTop="@dimen/dimen_50"
        android:layout_marginEnd="8dp"
        android:text="@string/fake_name"
        android:textSize="@dimen/text_24" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1"
        android:layout_margin="@dimen/dimen_8"
        android:background="@color/colorGray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_8"
        android:layout_marginTop="@dimen/dimen_4"
        android:id="@+id/person_age_text_view"
        android:layout_marginEnd="8dp"
        android:text="@string/fake_age"
        android:textSize="@dimen/text_24" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1"
        android:layout_margin="@dimen/dimen_8"
        android:background="@color/colorGray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_8"
        android:layout_marginTop="@dimen/dimen_4"
        android:layout_marginEnd="8dp"
        android:text="@string/fake_blood_type"
        android:id="@+id/person_blood_type_text_view"
        android:textSize="@dimen/text_24" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1"
        android:layout_margin="@dimen/dimen_8"
        android:background="@color/colorGray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_8"
        android:layout_marginTop="@dimen/dimen_4"
        android:layout_marginEnd="8dp"
        android:id="@+id/bags_number_text_view"
        android:text="@string/fake_blood_num"
        android:textSize="@dimen/text_24" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1"
        android:layout_margin="@dimen/dimen_8"
        android:background="@color/colorGray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_8"
        android:layout_marginTop="@dimen/dimen_4"
        android:layout_marginEnd="8dp"
        android:text="@string/fake_hospital_name"
        android:id="@+id/hospital_name_text_view"
        android:textSize="@dimen/text_24" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1"
        android:layout_margin="@dimen/dimen_8"
        android:background="@color/colorGray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_8"
        android:layout_marginTop="@dimen/dimen_4"
        android:id="@+id/hospital_address_text_view"
        android:layout_marginEnd="8dp"
        android:text="@string/fake_hospital_address"
        android:textSize="@dimen/text_24" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1"
        android:layout_margin="@dimen/dimen_8"
        android:background="@color/colorGray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_8"
        android:layout_marginTop="@dimen/dimen_4"
        android:layout_marginEnd="8dp"
        android:id="@+id/person_phone_number_text_view"
        android:text="@string/fake_phone_number"
        android:textSize="@dimen/text_24" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1"
        android:layout_margin="@dimen/dimen_8"
        android:background="@color/colorGray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@drawable/container_drawable"
        android:layout_marginEnd="@dimen/dimen_8"
        android:layout_marginTop="@dimen/dimen_8"
        android:layout_marginStart="@dimen/dimen_8"
        android:layout_height="wrap_content">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_8"
            android:layout_marginTop="@dimen/dimen_4"
            android:layout_marginEnd="@dimen/dimen_8"
            android:text="@string/fake_details"
            android:textSize="@dimen/text_24" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_8"
            android:layout_marginTop="@dimen/dimen_4"
            android:layout_marginEnd="8dp"
            android:text="hfg,kfgjkfgklghjgh;klfhjsfhgkgjfdfsjklkdfjdfkjgfdkgjklsdfklgdjhklgjsdldlfkklfjsdjhgdjksfghjkdhjkgshfkgljsdfgjjsdfgjkdsjkghsdkjghsdkjgsglkhgsjkl"
            android:textSize="@dimen/text_24" />

    </LinearLayout>



    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1"
        android:layout_margin="@dimen/dimen_8"
        android:background="@color/colorGray" />


    <Button
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_8"
        android:layout_marginTop="@dimen/dimen_16"
        android:layout_marginEnd="@dimen/dimen_8"
        android:background="@color/colorGreen"
        android:text="@string/call"
        android:textColor="@android:color/white" />

</LinearLayout>
