<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ui.fragment.CreateAccountFragment">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/name_text_layout"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_50"
            android:background="@drawable/edit_text_background"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/name_edit_text"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/name_edit"
                android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_50"
            android:background="@drawable/edit_text_background"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/email_edit_text"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_40"
            android:layout_margin="@dimen/dimen_8"
            android:orientation="horizontal">


            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/year_spinner"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/month_spinner"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:gravity="center" />

            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/day_spinners"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/dimen_8"
                android:layout_weight="1"
                android:gravity="center" />


        </LinearLayout>


        <com.jaredrummler.materialspinner.MaterialSpinner
            android:id="@+id/blood_type_spinner"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_50"
            android:layout_below="@id/birth_day_edit_text"
            android:hint="@string/blood_type" />

        <android.support.design.widget.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_50"
            android:layout_below="@id/blood_type_spinner"
            android:background="@drawable/edit_text_background"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/last_donate_data_edit"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:drawableStart="@drawable/ic_date_range_black_24dp"
                android:hint="@string/last_donate_data"
                android:inputType="date" />
        </android.support.design.widget.TextInputLayout>

        <com.jaredrummler.materialspinner.MaterialSpinner
            android:id="@+id/state_spinner"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/last_donate_data_edit"
            android:hint="@string/state" />

        <com.jaredrummler.materialspinner.MaterialSpinner
            android:id="@+id/city_spinner"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/state_spinner"
            android:hint="@string/city" />

        <android.support.design.widget.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_50"
            android:layout_below="@id/city_spinner"
            android:background="@drawable/edit_text_background"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/phone_number_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:background="@android:color/transparent"
                android:hint="@string/phone_number_hint" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/phone_number_edit"
            android:background="@drawable/edit_text_background"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/password_edit"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password_hint"

                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_50"
            android:layout_below="@id/password_edit"
            android:background="@drawable/edit_text_background"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/repeat_password_edit"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"

                android:layout_height="match_parent"
                android:hint="@string/repeat_password_hint" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/register_button"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/repeat_password_edit"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/dimen_32"
            android:layout_marginBottom="@dimen/dimen_8"
            android:background="@color/colorBlueDark"
            android:text="@string/register"
            android:textColor="@android:color/white" />


    </LinearLayout>


</ScrollView>
